--- a/samconfig.toml
+++ b/samconfig.toml
@@ -19,7 +19,7 @@ confirm_changeset = true
 resolve_s3 = true
 s3_prefix = "petrol-price-api"
 region = "ap-southeast-2"
-disable_rollback = true
+disable_rollback = false
 image_repositories = []
 
 [default.package.parameters]
