--- a/template.yaml
+++ b/template.yaml
@@ -34,13 +34,17 @@ Resources:
       Policies:
         - DynamoDBCrudPolicy:
             TableName: current_fuel_prices
+        - DynamoDBCrudPolicy:
+            TableName: safpis_fuel_sites
 
   ReturnPricesDatabase:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Metadata:
+      BuildMethod: go1.x
     Properties:
       CodeUri: src/fetch/
-      Handler: fuelpriceservice
-      Runtime: go1.x
+      Handler: bootstrap
+      Runtime: provided.al2
       Architectures:
         - x86_64
       Events:
@@ -63,6 +67,8 @@ Resources:
       Policies:
         - DynamoDBCrudPolicy:
             TableName: current_fuel_prices
+        - DynamoDBCrudPolicy:
+            TableName: safpis_fuel_sites
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
