added split key

--- a/template.yaml
+++ b/template.yaml
@@ -48,13 +48,16 @@ Resources:
       Architectures:
         - x86_64
       Events:
-        PricesEvent:
+        PricesGetEvent:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /prices
             Method: GET
-          Parameters:
-            Lati: Sting
+        PricesPostEvent:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Path: /prices
+            Method: POST
         SitesEvent:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
